--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script>
         // Перенаправляем на главную страницу
         sessionStorage.redirect = location.pathname;
-        location.href = '/';
+        location.href = '/seo_lab1/';;
     </script>
 </head>
 <body>
@@ -15,4 +15,5 @@
         <p>Перейдите на <a href="/">главную страницу</a></p>
     </noscript>
 </body>
+
 </html>
